<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


  <TextView
      android:id="@+id/diange_listview_geming"
      android:layout_width="280dp"
      android:layout_height="50dp"
      android:text="歌名"
      android:textSize="20sp"
      android:textStyle="bold"
      android:textColor="@color/white"
      android:gravity="center_vertical"
      android:layout_marginStart="10dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />
    <TextView
        android:id="@+id/diange_listview_geshou"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="歌手"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/diange_listview_geming"
        app:layout_constraintTop_toBottomOf="@id/diange_listview_geming"/>
    <Button
        android:id="@+id/diange_listview_cancle"
        android:background="@drawable/diange_listview_cancel_background"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:backgroundTint="@color/white"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/diange_listview_up"
        app:layout_constraintBottom_toBottomOf="parent"/>

  <Button
      android:id="@+id/diange_listview_up"
      android:layout_width="35dp"
      android:layout_height="35dp"
      android:background="@drawable/diange_listview_up_background"
      android:backgroundTint="@color/white"
      android:focusable="false"
      android:focusableInTouchMode="false"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>