<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GequLiuxingActivity"
    android:background="@drawable/background">



    <ImageView
        android:id="@+id/liuxing_backgruond"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/liuxing"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ListView
        android:id="@+id/liuxing_listview"
        android:layout_width="wrap_content"
        android:layout_height="530dp"
        app:layout_constraintTop_toBottomOf="@id/liuxing_backgruond"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>