...
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/fadanmu"
        android:layout_width="145dp"
        android:layout_height="100dp"
        android:text="."
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_fadanmu_backgruond"
...
